Web Page Update
Add more instuctions.
Add publication.
Add a link to the homepage of Netlab

--- a/ArticleNet/pages/bootstrap-1.2.0.css
+++ b/ArticleNet/pages/bootstrap-1.2.0.css
@@ -1,8 +1,6 @@
-/*
- * Revised version of Bootstrap v1.2.0
- * Revised by Xiaonan Ji, on 12/11/2012
- * 
- * For Bootstrap v1.2.0:
+/*!
+ * Bootstrap v1.2.0
+ *
  * Copyright 2011 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
